--- a/UIButtonRightArrow/Base.lproj/Main.storyboard
+++ b/UIButtonRightArrow/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="z4m-GN-pr4">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Product Details-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Product Details" id="BYZ-38-t0r" customClass="ViewController" customModule="UIButtonRightArrow" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,106 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7jh-vB-zpU">
+                                <rect key="frame" x="20" y="84" width="335" height="563"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sbI-8X-Uin">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="511"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auto-158479_640.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Z2-9b-Iz0">
+                                                <rect key="frame" x="0.0" y="0.0" width="162.5" height="511"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Concept Mustang" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJe-R6-d9l">
+                                                <rect key="frame" x="172.5" y="0.0" width="162.5" height="511"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="253" verticalHuggingPriority="253" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HqH-bM-TCA">
+                                        <rect key="frame" x="0.0" y="531" width="335" height="32"/>
+                                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="Write a review">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="VXt-Ol-ySe" kind="show" id="AKh-rN-D3B"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7jh-vB-zpU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="8nF-J9-Zv7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7jh-vB-zpU" secondAttribute="bottom" constant="20" id="Cu8-66-YsH"/>
+                            <constraint firstAttribute="trailing" secondItem="7jh-vB-zpU" secondAttribute="trailing" constant="20" id="mXM-d9-Pct"/>
+                            <constraint firstItem="7jh-vB-zpU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="tKU-GL-qpA"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Product" id="zWU-5N-DM7"/>
+                    <connections>
+                        <outlet property="buttonSelect" destination="HqH-bM-TCA" id="5xQ-AL-ker"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="983.20000000000005" y="43.628185907046479"/>
+        </scene>
+        <!--Product Review-->
+        <scene sceneID="0bW-E0-QyZ">
+            <objects>
+                <viewController title="Product Review" id="VXt-Ol-ySe" customClass="ReviewViewController" customModule="UIButtonRightArrow" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rcU-g6-Fhi"/>
+                        <viewControllerLayoutGuide type="bottom" id="yFj-Ok-lII"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Asq-bk-AnP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="This product would be  fantastic!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="mQX-zQ-3yZ">
+                                <rect key="frame" x="10" y="94" width="355" height="543"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yFj-Ok-lII" firstAttribute="top" secondItem="mQX-zQ-3yZ" secondAttribute="bottom" constant="30" id="6Se-yj-ySr"/>
+                            <constraint firstAttribute="trailing" secondItem="mQX-zQ-3yZ" secondAttribute="trailing" constant="10" id="FDX-Io-rLU"/>
+                            <constraint firstItem="mQX-zQ-3yZ" firstAttribute="leading" secondItem="Asq-bk-AnP" secondAttribute="leading" constant="10" id="rnN-7m-zrJ"/>
+                            <constraint firstItem="mQX-zQ-3yZ" firstAttribute="top" secondItem="rcU-g6-Fhi" secondAttribute="bottom" constant="30" id="vco-ji-799"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f2s-By-aXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bUi-u7-gzY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="z4m-GN-pr4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eu2-As-f12">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="x3E-Q9-trc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z4i-am-7RY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="716" y="21.139430284857571"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="auto-158479_640.png" width="640" height="397"/>
+    </resources>
 </document>
